# retroachievements-apprise

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_tests_ci
.github/workflows/: build.yml
app/: retroachievements_apprise.py  test_retroachievements_apprise.py
app/formatting/: formatting.py  test_formatting.py
app/notifications/: notifications.py  test_notifications.py
app/retroachievements/: test_retroachievements.py
